BigChange: ResearchMovements, work